deployment/prod/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-microservice
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-microservice
  template:
    metadata:
      labels:
        app: spring-microservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: spring-microservice
          image: registry.gitlab.com/dungnv08111/techcon:a8ce4a566a844db19ffdc2e86b6ca1f980515aa2
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1'
          volumeMounts:
            - name: log-path
              mountPath: /var/log/app
          ports:
            - name: http
              containerPort: 8080
      #          readinessProbe:
      #            httpGet:
      #              path: /demo/status
      #              port: http
      #            initialDelaySeconds: 20
      #            periodSeconds: 15
      #            failureThreshold: 6
      #          livenessProbe:
      #            httpGet:
      #              path: /demo/status
      #              port: http
      #            initialDelaySeconds: 120
      volumes:
        - name: log-path
          hostPath:
            path: /var/log/app
      imagePullSecrets:
        - name: docker-repos.registry.gitlab.com-secret
